course_files/mac/manifests/ingress/nginx-ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
      - path: /test-nginx
        backend:
          serviceName: nginx-service
          servicePort: 80
